<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="custom_model_title">Custom Model</string>
    <string name="select_model">Select Model</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="execute">Execute</string>
    <string name="select_image_placeholder">Select Image</string>
    <string name="output_title">Output Result</string>
    <string name="output_placeholder">Model output will appear here...</string>
    <string name="explain_title">Help</string>
    <string name="explain_custom_model">This is a custom model module where you can implement your own AI model functionality.</string>
    <string name="help">Help</string>
    <string name="more">More</string>
</resources> 