<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <!-- 顶部工具栏 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_model_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/custom_model_title"
        app:titleTextColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />

    <!-- 功能按钮区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp">

        <Button
            android:id="@+id/btn_select_model"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickSelectModel"
            android:text="@string/select_model"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_select_photo"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickSelectPhoto"
            android:text="@string/select_photo"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_small_item"
            android:gravity="center"
            android:onClick="onClickTakePhoto"
            android:text="@string/take_photo"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_small_item_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- 图片预览区域 -->
    <FrameLayout
        android:id="@+id/image_preview_container"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_marginTop="14dp"
        android:background="@color/gray_btn"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_image_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:drawableTopCompat="@drawable/icon_style"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/select_image_placeholder"
            android:textAllCaps="false"
            android:textColor="@color/text_gray"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progressbar"
            android:visibility="invisible" />
    </FrameLayout>

    <!-- 执行按钮 -->
    <Button
        android:id="@+id/btn_execute"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/btn_head_experience"
        android:gravity="center"
        android:onClick="onClickExecute"
        android:text="@string/execute"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible" />

    <!-- 输出框区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_btn"
                android:padding="12dp"
                android:text="@string/output_placeholder"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

        </ScrollView>
    </LinearLayout>

</LinearLayout> 